Fix overflow in FirstFold and PressReleaseContent

--- a/components/agility-pageModules/pressReleaseContent/pressReleaseContent.module.scss
+++ b/components/agility-pageModules/pressReleaseContent/pressReleaseContent.module.scss
@@ -3,7 +3,7 @@
 
 .pressReleaseContent {
   .firstFold {
-    width: 100vw;
+    width: 100%;
     padding: unset;
     height: 100%;
     min-height: 25rem;
